@@ -61,10 +61,19 @@ install:
 	ln -sf ${VARDIR}/skins ${APPDIR}/skins
 	ln -sf ${VARDIR}/templates ${CONFDIR}/templates
 	ln -sf ${APPDIR}/bin/galleon /etc/init.d/galleon
-	chkconfig --add galleon
+	if [ -e /usr/sbin/update-rc.d ] ; then \
+		/usr/sbin/update-rc.d galleon start 95 3 4 5 . stop 30 3 4 5 . ; \
+	else \
+		chkconfig --add galleon ;\
+	fi
 
 uninstall:
-	chkconfig --del galleon
+	if [ -e /usr/sbin/update-rc.d ] ; then \
+		/usr/sbin/update-rc.d -f galleon remove ; \
+	else \
+		chkconfig --del galleon ; \
+		rm -f /etc/init.d/galleon ; \
+	fi
 	rm -f ${APPDIR}/apps
 	rm -f ${APPDIR}/conf
 	rm -f ${APPDIR}/data
@@ -73,7 +82,6 @@ uninstall:
 	rm -f ${APPDIR}/logs
 	rm -f ${APPDIR}/skins
 	rm -f ${CONFDIR}/templates
-	rm -f /etc/init.d/galleon
 	-rm -rf ${CONFDIR}
 	-rm -rf ${LOGDIR}
 	-rm -rf ${CACHEDIR}
